# ampq-rust-demo

./: .dockerignore  Cargo.toml  Dockerfile  Dockerfile.consumer  Dockerfile.producer  README.md  docker-compose.yaml
.github/workflows/: main.yml  rust.yml  tags.yaml
k8s/: app.yaml  rabbitmq-helm-values.yaml
src/: lib.rs  main.rs  options.rs  quote_client.rs
