[package]
name = "ampq-rust-demo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqp-manager = "1.2.0"
structopt = "0.3"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.10.1", features = ["full"] }
futures = "0.3"