[package]
name = "ampq_rust_demo"
version = "0.1.0"
edition = "2018"
default-run = "main"


[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "quotes"
path = "src/bin/quotes.rs"


[dependencies]
amqp-manager = "1.2.0"
structopt = "0.3"
env_logger = "0.9"
log = "0.4"
tokio = { version = "1.10.1", features = ["full"] }
futures = "0.3"
reqwest = {version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"